--- a/Example/1Flow.xcodeproj/xcshareddata/xcschemes/1Flow-Example.xcscheme
+++ b/Example/1Flow.xcodeproj/xcshareddata/xcschemes/1Flow-Example.xcscheme
@@ -28,7 +28,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACE41AFB9204008FA782"
+               BlueprintIdentifier = "43F7E8FF2797F9B200C4883B"
                BuildableName = "1Flow_Tests.xctest"
                BlueprintName = "1Flow_Tests"
                ReferencedContainer = "container:1Flow.xcodeproj">
@@ -40,20 +40,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "1Flow_Tests.xctest"
-               BlueprintName = "1Flow_Tests"
-               ReferencedContainer = "container:1Flow.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -63,14 +50,43 @@
             ReferencedContainer = "container:1Flow.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "43F7E8FF2797F9B200C4883B"
+               BuildableName = "1Flow_Tests.xctest"
+               BlueprintName = "1Flow_Tests"
+               ReferencedContainer = "container:1Flow.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "43F7E8FF2797F9B200C4883B"
+               BuildableName = "1Flow_Tests.xctest"
+               BlueprintName = "1Flow_Tests"
+               ReferencedContainer = "container:1Flow.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "43F7E90C2797FA6C00C4883B"
+               BuildableName = "1Flow_ExampleTests.xctest"
+               BlueprintName = "1Flow_ExampleTests"
+               ReferencedContainer = "container:1Flow.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -87,8 +103,6 @@
             ReferencedContainer = "container:1Flow.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
